--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-image: url("../images/background-image.png");
+height: 100%;
+background-position: center;
+background-repeat: no-repeat;
+background-position: top;
+}
+header{
+    background: rgb(253,255,255);
+background: linear-gradient(90deg, rgba(253,255,255,1) 0%, rgba(136,255,244,1) 92%, rgba(120,240,255,1) 100%, rgba(6,0,105,1) 100%);
 }
 .brand-name{
     font-size: 40px;
@@ -7,8 +16,8 @@ body{
 .brand-name .sub-text{
     font-size: 20px;
 }
-.footer-item{
-    background-color: rgb(94, 245, 212);
+footer{
+    background-color: rgb(131, 143, 140);
     font-weight: bold;
     color: black;
 }
