--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,3 +36,18 @@ footer {
   margin-top: 140px;
   position: absolute;
 }
+
+.error {
+  color: rgb(131, 143, 140);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error-big {
+  font-size: 25vh;
+}
+
+.error-small {
+  font-size: 10vh;
+}
