--- a/public/css/home.css
+++ b/public/css/home.css
@@ -70,9 +70,15 @@ footer {
 }
 
 .poll-container{
-  padding-top: 20px;
+  padding-top: 2px;
   padding-bottom: 5px;
-  border: 1px solid black;
   border-radius: 5px;
 }
 
+.option-full{
+  margin-bottom: 20px;
+  background-color: #e3fff9;
+  padding: 0px 5px 5px 5px;
+  border-radius: 5px;
+  border: 0.3px solid black;*/
+}
