--- a/public/css/home.css
+++ b/public/css/home.css
@@ -45,6 +45,8 @@ footer {
 }
 
 #form-create {
+  margin-top: 2px;
+  margin-left: 15px;
   padding-top: 20px;
   padding-bottom: 5px;
   border: 1px solid black;
@@ -70,6 +72,7 @@ footer {
 }
 
 .poll-container{
+  margin-top: 0px;
   padding-top: 2px;
   padding-bottom: 5px;
   border-radius: 5px;
