--- a/public/css/home.css
+++ b/public/css/home.css
@@ -85,3 +85,9 @@ footer {
   border-radius: 5px;
   border: 0.3px solid black;*/
 }
+
+.nav-item:hover {
+  transform: translateX(20px);
+  transition: transform 0.5s ease-in-out;
+  cursor: pointer;
+}
