--- a/public/css/home.css
+++ b/public/css/home.css
@@ -91,3 +91,20 @@ footer {
   transition: transform 0.5s ease-in-out;
   cursor: pointer;
 }
+
+.loader {
+  position: fixed;
+  top: 40vh;
+  left: 45vw;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 200px;
+  height: 200px;
+  -webkit-animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
