--- a/public/css/home.css
+++ b/public/css/home.css
@@ -83,7 +83,7 @@ footer {
   background-color: #e3fff9;
   padding: 0px 5px 5px 5px;
   border-radius: 5px;
-  border: 0.3px solid black;*/
+  border: 0.3px solid black;
 }
 
 .nav-item:hover {
